syntax="proto3";
package evntsrc.users;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

// Enable custom Marshal method.
option (gogoproto.marshaler_all) = true;
// Enable custom Unmarshal method.
option (gogoproto.unmarshaler_all) = true;
// Enable custom Size method (Required by Marshal and Unmarshal).
option (gogoproto.sizer_all) = true;
// Enable registration with golang/protobuf for the grpc-gateway.
option (gogoproto.goproto_registration) = true;
// Enable generation of XXX_MessageName methods for grpc-go/status.
option (gogoproto.messagename_all) = true;

message User {
    string id = 1 [(gogoproto.moretags) = "bson:\"_id\""];
    string name = 2;
    string email = 3;
    google.protobuf.Timestamp createdAt = 4;
    string password = 5;
    map<string, bytes> metadata = 6;
    string picture = 7;
    string company = 8;
    MFA mfa = 9;
    enum Status {
        PENDING = 0;
        ACTIVE = 1;
        DELETED = 2;
    };
    Status status = 10;
}

message UserRequest {
    oneof query {
        string id = 1 [(gogoproto.moretags) = "bson:\"_id\""];
        string email = 2;
    }
    enum Status {
        ACTIVE = 0;
        PENDING = 1;
        DELETED = 2;
        ANY = 99;
    }
    Status status = 3;
}

message UserList {
    repeated User users = 1;
}

message PasswordUpdateRequest {
    string id = 1 [(gogoproto.moretags) = "bson:\"_id\""];
    string password = 2;
    string current_password = 3;
}

message UserUpdateRequest {
    string id = 1 [(gogoproto.moretags) = "bson:\"_id\""];
    User user = 2;
    bool replace = 3;
    string currentPassword = 4;
}

message AuthRequest {
    string email = 1;
    string password = 2;
}

message MFAFIDO {
    bytes registration = 1;
    bytes registrationChallenge = 2;
}

message MFASMS {
    string mobile = 1;
}

message MFATOTP {
    string key = 1;
    repeated string backupCodes = 2;
}

message MFA {
    oneof MFA {
        MFAFIDO FIDO = 1;
        MFASMS SMS = 2;
        MFATOTP TOTP = 3;
    }
}

message ValidateRequest {
    string email = 1;
    string token = 2;
}

message Empty {}

service UserService {
    rpc Create(User) returns (User) {
        option (google.api.http) = {
            post: "/v1/auth/register"
            body: "*"
        };
    };
    rpc ValidateAccount(ValidateRequest) returns (Empty) {
        option (google.api.http) = {
            post: "/v1/auth/validate_account"
            body: "*"
        };
    };
    rpc Delete(UserRequest) returns (Empty) {};
    rpc Get(UserRequest) returns (User) {
        option (google.api.http) = {
            get: "/v1/users/{id}"
        };
    };
    rpc Find(UserRequest) returns (User) {};
    rpc FindUsers(UserRequest) returns (stream User) {};
    rpc List(Empty) returns (UserList) {};
    rpc SetPassword(PasswordUpdateRequest) returns (Empty) {
        option (google.api.http) = {
            post: "/v1/users/{id}/password"
            body: "*"
            additional_bindings {
                post: "/v1/me/password"
                body: "*"
            }
        };
    };
    rpc Update(UserUpdateRequest) returns (User) {
        option (google.api.http) = {
            post: "/v1/users/{id}"
            body: "*"
            additional_bindings {
                post: "/v1/me"
                body: "*"
            }
        };
    };
    rpc Me(Empty) returns (User) {
        option (google.api.http) = {
            get: "/v1/me"
        };
    };
}